# novel_agent

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  architect.py  auditor.py  revisor.py  scout.py  style_engineer.py  writer.py
core/: __init__.py  agent_flow_manager.py  ambiguity_detector.py  batch_coordinator.py  character_manager.py  checkpoint_manager.py  de_ai_checker.py  diagnostic_tool.py  dialogue_database.py  diversity_report.py  exporter.py  expression_variants.py  file_importer.py  foreshadow_tracker.py  genre_knowledge.py  main_agent.py  meme_library.py  memory_system.py  modification_tracker.py  novel_database.py  prompt_loader.py  quality_gate.py  session_state.py  silent_modification_detector.py  skill_engine.py  skill_library.py  slash_command_handler.py  structure_templates.py  style_learner.py  trend_refresher.py  truth_files.py  user_profile.py  version_manager.py
templates/: architect_prompt.md  auditor_prompt.md  revisor_prompt.md  scout_prompt.md  style_engineer_prompt.md  writer_prompt.md
tests/: __init__.py  test_ambiguity_detector.py  test_architect.py  test_auditor.py  test_batch_coordinator.py  test_character_manager.py  test_checkpoint_manager.py  test_de_ai_checker.py  test_diagnostic_tool.py  test_dialogue_database.py  test_diversity_report.py  test_exporter.py  test_expression_variants.py  test_file_importer.py  test_foreshadow_tracker.py  test_genre_knowledge.py  test_llm_cache.py  test_main_agent.py  test_meme_library.py  test_memory_system.py  test_prompt_loader.py  (+18 more)
(+27 files in other folders)
